kubernetes/apps/productivity/convertx/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convertx
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: convertx.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Productivity
    gethomepage.dev/name: ConvertX
    gethomepage.dev/icon: mdi-file-convert
    gethomepage.dev/description: File converter
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - convertx.krapulax.dev
  rules:
    - backendRefs:
        - name: convertx
          namespace: productivity
          port: 3000
